--- a/_11_cau_lenh_lap_2/bai_tap/bai_tap_vong_lap_1.html
+++ b/_11_cau_lenh_lap_2/bai_tap/bai_tap_vong_lap_1.html
@@ -14,12 +14,14 @@
     //     }
     // }
     // bài 2 lấy thông tin nhiệt độ
-    // let a = parseInt(prompt("nhập nhiệt độ"));
-    // if (a > 100) {
-    //     alert("yêu cầu giảm nhiệt độ");
-    // }
-    // if (a < 20) {
-    //     alert("yêu cầu tăng nhiệt dộ")
+    // for (let i = 0; i >= 0 ; i++) {
+    //     let a = parseInt(prompt("nhập nhiệt độ"));
+    //     if (a > 100) {
+    //         alert("yêu cầu giảm nhiệt độ");
+    //     }
+    //     if (a < 20) {
+    //         alert("yêu cầu tăng nhiệt dộ")
+    //     }
     // }
     // bài 3 Hiển thị 20 dãy số fibonacci
     // let a = 0;
@@ -36,15 +38,15 @@
     // let a = 0;
     // let b = 1;
     // let i = 0;
-    // while (i < 50) {
+    // let limit=parseInt(prompt("input here"))
+    // while (i < limit) {
     //     let c = a + b;
     //     a = b;
     //     b = c;
     //     if (a % 5 == 0) {
     //         document.writeln(a);
-    //         break;
     //     }
-    //     i++
+    //    i++
     // }
     // bài 5 tổng 20 số đầu tiên fibonacci
     // let a = 0
