--- a/_13_mang_2/bai_tap/luyen_tap_2.html
+++ b/_13_mang_2/bai_tap/luyen_tap_2.html
@@ -6,20 +6,66 @@
 </head>
 <body>
 <script>
-    let a = [
-        [1, 2, 1, 24],
-        [8, 11, 9, 4],
-        [7, 0, 7, 27],
-        [7, 4, 28, 14],
-        [3, 10, 26, 7]
-    ];
+    // bài 1
+    // let a = [
+    //     [1, 2, 1, 24],
+    //     [8, 11, 9, 4],
+    //     [7, 0, 7, 27],
+    //     [7, 4, 28, 14],
+    //     [3, 10, 26, 7]
+    // ];
+    //
+    // for (let i in a) {
+    //     document.write("row " + i + "</br>");
+    //     for (let j in a[i]) {
+    //         document.write(" " + a[i][j] + "</br>");
+    //     }
+    // }
 
-    for (let i in a) {
-        document.write("row " + i + "</br>");
-        for (let j in a[i]) {
-            document.write(" " + a[i][j] + "</br>");
-        }
-    }
+    // bài 2
+    // let str = ['c', 's', 'c', '2', '6', '1']
+    // str.reverse()
+    // document.write(str.join(""))
+
+    // bài 3
+    // let arr = ["hello", "cho", "ca", "meo", 2, 1, 5, 6 ];
+    // let count = 0;
+    // for (let i = 0; i < arr.length; i++) {
+    //     if (typeof arr[i] == "number") {
+    //         count++
+    //     }
+    // }
+    // document.write("số ký tự trong mảng là: " + count);
+
+    // bài 4
+    // let arr = ["hello", "cho", "ca", "meo", "ga", 2, 1, 5, 6];
+    // let count = 0;
+    // for (let i = 0; i < arr.length; i++) {
+    //     if (typeof arr[i] == "number") {
+    //         count++
+    //     }
+    // }
+    // document.write("số ký tự trong mảng là: " + count);
+
+    // bài 5
+    // let arr1 = new Array(5);
+    // let arr2 = new Array(5);
+    // for (let i = 0; i < arr1.length; i++) {
+    //     arr1[i] = prompt("nhập phần tử vào đây")
+    // }
+    // for (let j = 0; j < arr1.length; j++) {
+    //     arr2[j] = prompt("nhập phần tử vào đây")
+    // }
+    // for (let k = 0; k < arr1.length; k++) {
+    //     if (arr1[i] == arr2[j]) {
+    //         document.write("phần tử giống nhau là: " + " mảng 1" + arr1[i] + "mảng 2" + arr2)
+    //     }
+    //         // else {
+    //     //     document.write("phần tử khác nhau là: " + " mảng 1" + arr1[i] + "mảng 2" + arr2)
+    //     //
+    //     // }
+    // }
+
 </script>
 </body>
 </html>
