--- a/_13_mang_2/bai_tap/luyen_tap_1.html
+++ b/_13_mang_2/bai_tap/luyen_tap_1.html
@@ -41,7 +41,6 @@
     // }
     // let max = 0;
     // let total = 0;
-    // ;
     // for (let i = 0; i < arr.length; i++) {
     //     if (arr[i] > max) {
     //         max = arr[i]
@@ -61,18 +60,22 @@
     // document.write("đảo ngược các phần tử của mảng " +   arr.reverse())
 
     // bài 5
-    // let arr=new Array(10)
-    // for (let i = 0; i < 10; i++) {
-    //     arr[i]=parseInt(prompt("nhập phần tử của mảng "))
+    // let arr = new Array(5);
+    // for (let i = 0; i < 5; i++) {
+    //     arr[i] = parseInt(prompt("nhập phần tử của mảng "))
     // }
-    // let soAm=0
+    // let soAm = 0;
+    // let count =0;
     // for (let i = 0; i < arr.length; i++) {
-    //     if (arr[i]<0){
+    //     if (arr[i] < 0) {
     //         soAm = arr[i]
-    //         document.write("ta có số âm là: " + soAm + '</br>')
+    //         count++
+    //         document.write("ta có số âm là:" + count +
+    //             " các số âm là: " + soAm + '</br>')
     //     }
+    //
     // }
-
+    //
     // bài 6
     // let arr = new Array(5);
     // for (let i = 0; i < arr.length; i++) {
