--- a/_13_mang_2/bai_tap/luyen_tap_2.html
+++ b/_13_mang_2/bai_tap/luyen_tap_2.html
@@ -28,44 +28,55 @@
     // document.write(str.join(""))
 
     // bài 3
-    // let arr = ["hello", "cho", "ca", "meo", 2, 1, 5, 6 ];
+    // let arr = ["hello", "cho", "ca", "meo", 3, 2, 1, 5, 6];
     // let count = 0;
     // for (let i = 0; i < arr.length; i++) {
-    //     if (typeof arr[i] == "number") {
-    //         count++
+    //     // if (typeof arr[i] == "string") {
+    //     //     count++
+    //     // }
+    //     if (isNaN(arr[i])){
+    //         continue;
     //     }
+    //     count++;
     // }
     // document.write("số ký tự trong mảng là: " + count);
 
     // bài 4
-    // let arr = ["hello", "cho", "ca", "meo", "ga", 2, 1, 5, 6];
-    // let count = 0;
-    // for (let i = 0; i < arr.length; i++) {
-    //     if (typeof arr[i] == "number") {
-    //         count++
-    //     }
-    // }
-    // document.write("số ký tự trong mảng là: " + count);
-
+    // let arr = prompt("nhập chuỗi ở đây")
+    // let str = arr.split('')
+    // document.write(str.length);
+    
     // bài 5
-    // let arr1 = new Array(5);
-    // let arr2 = new Array(5);
-    // for (let i = 0; i < arr1.length; i++) {
-    //     arr1[i] = prompt("nhập phần tử vào đây")
-    // }
-    // for (let j = 0; j < arr1.length; j++) {
-    //     arr2[j] = prompt("nhập phần tử vào đây")
-    // }
-    // for (let k = 0; k < arr1.length; k++) {
-    //     if (arr1[i] == arr2[j]) {
-    //         document.write("phần tử giống nhau là: " + " mảng 1" + arr1[i] + "mảng 2" + arr2)
+    // let a = prompt("nhập vào chuỗi thứ 1");
+    // let b = prompt("nhập vào chuỗi thứ 2");
+    // let str1 = a.split("")
+    // let str2 = b.split("")
+    // let check = true;
+    // for (let i = 0; i < str1.length; i++) {
+    //     if (str1[i] != str2[i]) {
+    //         check = false;
+    //         break;
     //     }
-    //         // else {
-    //     //     document.write("phần tử khác nhau là: " + " mảng 1" + arr1[i] + "mảng 2" + arr2)
-    //     //
-    //     // }
+    // }
+    // if (check) {
+    //     alert("chuỗi thứ 1 : " + str1 + "\n" +
+    //         "chuỗi thứ 2: " + str2 + "\n" +
+    //         "kết quả : 2 chuỗi giống nhau")
+    // } else {
+    //     alert("chuỗi thứ 1 : " + str1 + "\n" +
+    //         "chuỗi thứ 2: " + str2 + "\n" +
+    //         "kết quả : 2 chuỗi khác nhau")
     // }
 
+    // bài 6
+    // let a = prompt(" nhập chuỗi");
+    // let arr = a.split("");
+    // for (let i = 0; i < arr.length; i++) {
+    //     if (arr[i] == "-") {
+    //         arr[i] = "_"
+    //     }
+    // }
+    // alert(arr.join(""))
 </script>
 </body>
 </html>
