--- a/_14_ham_2/bai_tap/dao_nguoc_mang.html
+++ b/_14_ham_2/bai_tap/dao_nguoc_mang.html
@@ -6,12 +6,12 @@
 </head>
 <body>
 <script>
-    function kiemTra(a) {
-        return !isNaN(a)
+    function chuyenDoi(arr) {
+        alert(arr.reverse())
     }
 
-    let x = parseInt(prompt("nhập vào đây"))
-    alert(kiemTra(x))
+    let mang = [1, 2, 3, 4, 5, 6, 7, 8, 9]
+    chuyenDoi(mang)
 </script>
 </body>
 </html>
