--- a/_13_mang_2/bai_tap/luyen_tap_1.html
+++ b/_13_mang_2/bai_tap/luyen_tap_1.html
@@ -48,7 +48,7 @@
     //     total = total + arr[i]
     // }
     // let tb = 0;
-    // tb = total / 10
+    // tb = total / arr.length
     // document.write("số lớn nhất của mảng là:" + max + "</br>")
     // document.write("trung bình của mảng là: " + tb)
 
