--- a/_11_cau_lenh_lap_2/bai_tap/bai_tap_vong_lap_2.html
+++ b/_11_cau_lenh_lap_2/bai_tap/bai_tap_vong_lap_2.html
@@ -27,20 +27,20 @@
     // document.write(inherit)
 
     // bài 3 In tam giác vuông. Các góc vuông nằm ở các vị trí khác nhau
-    // let h = parseInt(prompt("inpput here"))
-    // for (i = 0; i < h; i++) {
-    //     for (let j = 0; j <= i; j++) {
-    //         document.writeln("*")
-    //     }
-    //     document.writeln("<br/>")
-    // }
-    // document.write('</br>')
-    // for (let i = h - 1; i >= 0; i--) {
-    //     for (let f = 0; f <= i; f++) {
-    //         document.writeln("*")
-    //     }
-    //     document.writeln("<br/>")
-    // }
+    let h = parseInt(prompt("inpput here"))
+    for (i = 0; i < h; i++) {
+        for (let j = 0; j <= i; j++) {
+            document.writeln("*")
+        }
+        document.writeln("<br/>")
+    }
+    document.write('</br>')
+    for (let i = h - 1; i >= 0; i--) {
+        for (let f = 0; f <= i; f++) {
+            document.writeln("*")
+        }
+        document.writeln("<br/>")
+    }
 
     // bài 4 Hình chữ nhật
     let a = 7;
